--- a/src/reform.html
+++ b/src/reform.html
@@ -230,10 +230,10 @@
 
     </footer>
 
-    <script type="text/javascript" src="./public/js/bf.js"></script>
-    <script type="text/javascript" src="./public/js/bf-utils.js"> </script>
-    <script type="text/javascript" src="./public/js/bf-hacks.js"> </script>
-    <script type="text/javascript" src="./public/js/bf-validation.js"></script>
+    <script type="text/javascript" src="./public/js/rf.js"></script>
+    <script type="text/javascript" src="./public/js/rf-utils.js"> </script>
+    <script type="text/javascript" src="./public/js/rf-hacks.js"> </script>
+    <script type="text/javascript" src="./public/js/rf-validation.js"></script>
 
   </body>
 
