added more fields

--- a/src/reform.html
+++ b/src/reform.html
@@ -135,6 +135,11 @@
                 </div>
 
                 <div class="rf-formwrap">
+                  <label>Im a input type file field</label>
+                  <input placeholder="Im a input type file field" type="file"/>
+                </div>
+
+                <div class="rf-formwrap">
                   <label>Im output field</label>
                   <output name="x"></output>
                 </div>
@@ -200,6 +205,18 @@
                 <div class="rf-formwrap">
                   <label>Im a selectfield</label>
                   <select>
+                    <option>Im a select option</option>
+                    <option>Im a select option</option>
+                  </select>
+                </div>
+
+                <div class="rf-formwrap">
+                  <label>Im a selectfield</label>
+                  <select multiple rows="8">
+                    <option>Im a select option</option>
+                    <option>Im a select option</option>
+                    <option>Im a select option</option>
+                    <option>Im a select option</option>
                     <option>Im a select option</option>
                     <option>Im a select option</option>
                   </select>
